# svg-filter

./: Filter.hs  Inkscape.hs  Main.hs  README.mkd  StringMatch.hs  default.nix  flake.nix  hie.yaml  proposal-talk.cabal  svg-filter.cabal
app/: Main.hs
src/: Filter.hs  Inkscape.hs  StringMatch.hs
