name:                svg-filter
version:             0.1.0.0
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable svg-filter
  main-is:             Filter.hs
  other-extensions:    OverloadedStrings, RankNTypes
  build-depends:       base >=4.7 && <4.8,
                       containers >=0.5 && <0.6,
                       text >=1.1 && <1.2,
                       xml-conduit >=1.2 && <1.3,
                       xml-lens >=0.1 && <0.2,
                       errors >=1.4 && <1.5,
                       data-default >=0.5 && <0.6,
                       system-filepath >=0.4 && <0.5,
                       mtl >=2.1 && <2.3,
                       transformers >=0.3 && <0.5,
                       pandoc-types >=1.12 && <1.13,
                       pandoc,
                       lens,
                       process,
                       attoparsec
  default-language:    Haskell2010
