name:                svg-filter
version:             1.0.0.0
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Inkscape, StringMatch, Filter
  other-extensions:    OverloadedStrings, RankNTypes
  build-depends:       base >=4.7 && <4.20,
                       containers >=0.5 && <0.8,
                       directory,
                       bytestring,
                       text >=1.1 && <2.2,
                       xml-conduit >=1.2 && <1.10,
                       xml-lens >=0.3 && <0.4,
                       errors >=2.0 && <2.4,
                       data-default >=0.5 && <0.8,
                       mtl >=2.1 && <2.4,
                       filepath,
                       transformers >=0.3 && <0.7,
                       pandoc-types >=1.12 && <1.24,
                       pandoc >=2.0 && <3.2,
                       lens,
                       process,
                       attoparsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable svg-filter
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, RankNTypes
  build-depends:       base,
                       bytestring,
                       text,
                       errors,
                       data-default,
                       mtl,
                       filepath,
                       transformers,
                       pandoc-types,
                       pandoc,
                       process,
                       svg-filter
  hs-source-dirs:      app
  default-language:    Haskell2010

